--- a/src/Styles/Randomizer.css
+++ b/src/Styles/Randomizer.css
@@ -101,7 +101,7 @@ header>h1 {
 }
 
 #grid-container,
-#dialog-container {
+.dialog-container {
     border: 1px solid black;
     outline: 1.25px solid rgb(100, 100, 100);
     box-shadow: 0 0 5px 0 black;
@@ -110,6 +110,9 @@ header>h1 {
 #dialog {
     background-color: rgba(0, 0, 0, .65);
     padding: 2rem;
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
 }
 
 #dialog-img-text {
@@ -136,7 +139,7 @@ footer {
     height: 50px;
 }
 
-#Fence-Icon {
+#vendor-icon {
     width: 250px;
     height: auto;
     flex-shrink: 0;
