--- a/src/Styles/Randomizer.css
+++ b/src/Styles/Randomizer.css
@@ -84,7 +84,7 @@ img {
     left: 0;
     font-size: 14px;
     color: white;
-    width: 245px;
+    width: 100%;
     padding-left: 5px;
     clip-path: polygon(0 0, 0 100%, 100% 100%, 100% 100%, 95% 0);
 }
