--- a/src/Styles/Maps.css
+++ b/src/Styles/Maps.css
@@ -1,37 +1,64 @@
 #maps-container {
-    width: 100vw;
-    height: 90vh;
-    background-color: black;
-    color: white;
-    overflow: scroll;
+  width: 100vw;
+  height: 90vh;
+  background-color: black;
+  color: white;
+  overflow: scroll;
+  background-image: url("../Assets/backgrounds/inteldesk.png");
+  background-size: cover;
+  background-position: center;
 }
 
 .map-slot {
-    width: 200px;
-    height: 115px;
-    background-color: grey;
-    border: 2px black solid;
-    position: relative;
+  width: 200px;
+  height: 115px;
+  background-color: grey;
+  position: relative;
+  transition: box-shadow ease-in-out 0.12s, scale ease-in-out 0.12s;
+}
+.map-slot:hover {
+  cursor: pointer;
 }
 
 #map-grid {
-    display: flex;
-    flex-wrap: wrap;
-    gap: 1rem;
-    max-width: 1000px;
-    justify-content: center;
-    padding: 2rem;
+  display: flex;
+  flex-wrap: wrap;
+  gap: 2rem;
+  justify-content: center;
+  padding: 3rem;
+  background-color: rgba(0, 0, 0, 0.65);
+}
+
+#map-grid-container {
+  width: 1000px;
+  border: 1px solid black;
+  outline: 1.25px solid rgb(100, 100, 100);
+  box-shadow: 0 0 5px 0 black;
+  position: relative;
+}
+
+#map-grid-error {
+  position: absolute;
+  top: 11px;
+  right: 10px;
+  background-image: -moz-linear-gradient(rgb(255, 92, 92), rgb(255, 36, 36));
+  padding: .5rem;
 }
 
 .selected {
-    border: solid 2px gold
+  box-shadow: 0 0 20px 5px rgb(251, 252, 189);
+  scale: 105%;
+}
+
+.winner {
+  box-shadow: 0 0 20px 5px rgb(132, 255, 83);
 }
 
 .disabled {
-    opacity: .5;
+  opacity: 0.5;
 }
 
 .map-icon {
-    width: 100%;
-    height: 100%;
+  width: 100%;
+  height: 100%;
 }
