--- a/src/Styles/Nav.css
+++ b/src/Styles/Nav.css
@@ -6,11 +6,12 @@
     color: white;
     align-items: center;
     height: 10vh;
+    position: relative;
+    overflow: visible;
 }
 
 .nav-button-container {
     display: flex;
-    gap: 2rem;
 }
 
 .nav-header {
@@ -22,4 +23,71 @@
 .nav-header>img {
     width: 45px;
     height: auto;
+}
+
+.nav-buttons {
+    appearance: none;
+    padding: .50rem 2rem;
+    font-family: Bender;
+    font-size: 1rem;
+    background-color: black;
+    border: none;
+    outline: none;
+    color:white;
+}
+
+.nav-buttons:hover {
+    background-image: linear-gradient(rgb(146, 146, 146), rgb(83, 83, 83));
+    cursor: pointer;
+}
+
+.nav-buttons:active {
+    background-image: linear-gradient(rgb(146, 146, 146), rgb(83, 83, 83));
+    scale: 95%;
+}
+
+#about-section {
+    position: absolute;
+    width: 100vw;
+    height: 100vh;
+    left: 0;
+    top: 0;
+    background-color: rgba(0, 0, 0, .65);
+    display: none;
+    z-index: 50;
+    justify-content: center;
+    align-items: center;
+}
+
+#about-container {
+    max-width: 800px;
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+    background-color: black;
+    padding: 2rem;
+    border: 1px solid black;
+    outline: 1.25px solid rgb(100, 100, 100);
+    box-shadow: 0 0 5px 0 black;
+}
+
+#about-container>p>a {
+    appearance: none;
+    color: white;
+}
+
+#about-created-by {
+    display: flex;
+    align-items: center;
+    gap: .5rem;
+}
+
+#git-icon {
+    width: 25px;
+    height: auto;
+}
+
+#ip-credit {
+    text-align: center;
+    font-size: .75rem;
 }
