--- a/src/Styles/Gear.css
+++ b/src/Styles/Gear.css
@@ -1,44 +1,50 @@
 .gear-container {
-    overflow: scroll;
-    position: relative;
+  overflow: scroll;
+  position: relative;
+  -ms-overflow-style: none; 
+  scrollbar-width: none; 
+}
+
+.gear-container::-webkit-scrollbar {
+  display: none;
 }
 
 .gear-container:hover {
-    cursor: pointer;
+  cursor: pointer;
 }
 
 .gear-info-container {
-    position: absolute;
-    padding: 1rem;
-    background-image: linear-gradient(rgb(71, 71, 71), black);
-    transition: ease-in top .5s, ease-in opacity .5s;
-    top:-300px;
-    left:0;
-    font-size: .75rem;
-    opacity: 0;
-    z-index: 10;
+  position: absolute;
+  padding: 1rem;
+  background-image: linear-gradient(rgb(71, 71, 71), black);
+  transition: ease-in top 0.5s, ease-in opacity 0.5s;
+  top: -300px;
+  left: 0;
+  font-size: 0.75rem;
+  opacity: 0;
+  z-index: 10;
 }
 
 .gear-name {
-    margin: .5rem 0;
+  margin: 0.5rem 0;
 }
 
 .reveal {
-    top: 0px;
-    opacity: 1;
+  top: 0px;
+  opacity: 1;
 }
 
 .gear-name {
-    font-size: .85rem;
+  font-size: 0.85rem;
 }
 .shortname-tag {
-    position: absolute;
-    bottom: 0;
-    right: 5px;
-    font-size: .75rem;
-    z-index: 5;
+  position: absolute;
+  bottom: 0;
+  right: 5px;
+  font-size: 0.75rem;
+  z-index: 5;
 }
 
-.purchase-info>p {
-    margin: .5rem 0;
+.purchase-info > p {
+  margin: 0.5rem 0;
 }
