--- a/src/Styles/Home.css
+++ b/src/Styles/Home.css
@@ -45,6 +45,10 @@
     scale: 95%;
 }
 
+.hideout-buttons:focus {
+    outline: 2px solid dodgerblue;
+}
+
 #scav-button {
     left: 15%;
     top: 50%;
