--- a/src/Styles/Randomizer.css
+++ b/src/Styles/Randomizer.css
@@ -176,6 +176,9 @@ footer {
     scale: 95%;
 }
 
+#getGear-button:focus {
+    outline: 1px solid dodgerblue;
+}
 
 @media screen and (max-width: 1500px) {
     .overlay {
