--- a/src/Styles/Nav.css
+++ b/src/Styles/Nav.css
@@ -1,104 +1,103 @@
 .navbar {
-    display: flex;
-    justify-content: space-between;
-    padding: 1rem 2rem;
-    background-color: black;
-    color: white;
-    align-items: center;
-    height: 10vh;
-    position: relative;
-    overflow: visible;
+  display: flex;
+  justify-content: space-between;
+  padding: 1rem 2rem;
+  background-color: black;
+  color: white;
+  align-items: center;
+  position: relative;
+  overflow: visible;
 }
 
 .nav-button-container {
-    display: flex;
-    gap: .1rem;
+  display: flex;
+  gap: 0.1rem;
 }
 
 .nav-header {
-    display: flex;
-    gap: 1rem;
-    align-items: center;
+  display: flex;
+  gap: 1rem;
+  align-items: center;
 }
 
-.nav-header>img {
-    width: 45px;
-    height: auto;
+.nav-header > img {
+  width: 45px;
+  height: auto;
 }
 
 .nav-buttons {
-    appearance: none;
-    padding: .50rem 2rem;
-    font-family: Bender;
-    font-size: 1rem;
-    background-color: black;
-    border: none;
-    outline: none;
-    color:white;
+  appearance: none;
+  padding: 0.5rem 2rem;
+  font-family: Bender;
+  font-size: 1rem;
+  background-color: black;
+  border: none;
+  outline: none;
+  color: white;
 }
 
 .nav-buttons:focus {
-    outline: 1px solid dodgerblue;
+  outline: 1px solid dodgerblue;
 }
 
 .nav-buttons:hover {
-    background-image: linear-gradient(rgb(146, 146, 146), rgb(83, 83, 83));
-    cursor: pointer;
+  background-image: linear-gradient(rgb(146, 146, 146), rgb(83, 83, 83));
+  cursor: pointer;
 }
 
 .nav-buttons:active {
-    background-image: linear-gradient(rgb(146, 146, 146), rgb(83, 83, 83));
-    scale: 95%;
+  background-image: linear-gradient(rgb(146, 146, 146), rgb(83, 83, 83));
+  scale: 95%;
 }
 
 #about-section {
-    position: absolute;
-    width: 100vw;
-    height: 100vh;
-    left: 0;
-    top: 0;
-    background-color: rgba(0, 0, 0, .65);
-    display: none;
-    z-index: 50;
-    justify-content: center;
-    align-items: center;
+  position: absolute;
+  width: 100vw;
+  height: 100vh;
+  left: 0;
+  top: 0;
+  background-color: rgba(0, 0, 0, 0.65);
+  display: none;
+  z-index: 50;
+  justify-content: center;
+  align-items: center;
 }
 
 #about-container {
-    max-width: 800px;
-    display: flex;
-    flex-direction: column;
-    gap: 1rem;
-    background-color: black;
-    padding: 2rem;
-    border: 1px solid black;
-    outline: 1.25px solid rgb(100, 100, 100);
-    box-shadow: 0 0 5px 0 black;
+  max-width: 800px;
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+  background-color: black;
+  padding: 2rem;
+  border: 1px solid black;
+  outline: 1.25px solid rgb(100, 100, 100);
+  box-shadow: 0 0 5px 0 black;
 }
 
-#about-container>p>a {
-    appearance: none;
-    color: white;
+#about-container > p > a {
+  appearance: none;
+  color: white;
 }
 
 #about-created-by {
-    display: flex;
-    align-items: center;
-    gap: .5rem;
+  display: flex;
+  align-items: center;
+  gap: 0.5rem;
 }
 
 #git-icon {
-    width: 25px;
-    height: auto;
+  width: 25px;
+  height: auto;
 }
 
 #ip-credit {
-    text-align: center;
-    font-size: .75rem;
+  text-align: center;
+  font-size: 0.75rem;
 }
 
 @media screen and (max-width: 500px) {
-    .nav-buttons {
-        padding: .5rem 1rem
-    }
+  .nav-buttons {
+    padding: 0.5rem 1rem;
+  }
 }
