--- a/src/index.css
+++ b/src/index.css
@@ -4,8 +4,12 @@
 }
 
 @keyframes spin {
-  0% {transform: rotate(0deg);}
-  100% {transform: rotate(360deg);}
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
 }
 
 * {
@@ -18,40 +22,37 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   background-color: transparent;
-  background-position:50% 50%;
+  background-position: 50% 50%;
   background-repeat: no-repeat;
-  min-height: 100vh;
+  height: 100lvh;
   position: relative;
   overflow: hidden;
-}
-
-body::before {
-  content: "";
-  position: absolute;
-  width: 100%;
-  height: 100%;
-  z-index: -1;
-  background-image: url("./Assets//hideout-logo.png");
-  background-repeat: no-repeat;
-  background-position:50% 50%;
-  animation: spin 2s infinite;
-  background-color: transparent;
-  overflow: hidden;
-}
-
-body::after {
-  content: "";
-  position: absolute;
-  left: 0;
-  top: 0;
-  width: 100%;
-  height: 100%;
-  z-index: -2;
   background-color: black;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+#app-container {
+  position: relative;
+  display: flex;
+  flex-direction: column;
 }
 
+#hideout-logo {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  z-index: -1;
+}
+
+#hideout-logo > img {
+  animation: spin 2s infinite;
+}
+
+.animate-page {
+  flex: auto;
+}
+
+code {
+  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
+    monospace;
+}
