height attirbutes added to body, #root, #app-container css classes

--- a/src/index.css
+++ b/src/index.css
@@ -30,10 +30,15 @@ body {
   background-color: black;
 }
 
+#root {
+  height: inherit;
+}
+
 #app-container {
   position: relative;
   display: flex;
   flex-direction: column;
+  height: inherit;
 }
 
 #hideout-logo {
