--- a/src/Styles/Meds.css
+++ b/src/Styles/Meds.css
@@ -1,40 +1,40 @@
 #meds-container {
-    width: 100vw;
-    height: 90vh;
-    background-color: black;
-    color: white;
-    display: flex;
-    overflow: scroll;
-    background-image: url("../Assets/backgrounds/medstation.png");
-    background-size: cover;
-    background-position: center;
+  width: 100vw;
+  height: 90lvh;
+  background-color: black;
+  color: white;
+  display: flex;
+  overflow: scroll;
+  background-image: url("../Assets/backgrounds/medstation.png");
+  background-size: cover;
+  background-position: center;
 }
 
 #cocktail-grid {
-    max-width: fit-content;
-    display: flex;
-    gap: 2rem;
-    flex-wrap: wrap;
-    justify-content: center;
-    padding: 3rem;
-    background-color: rgba(0, 0, 0, .65);
+  max-width: fit-content;
+  display: flex;
+  gap: 2rem;
+  flex-wrap: wrap;
+  justify-content: center;
+  padding: 3rem;
+  background-color: rgba(0, 0, 0, 0.65);
 }
 
 .cocktail-slots {
-    width: 250px;
-    height: 180px;
-    background-color: black;
-    position: relative;
+  width: 250px;
+  height: 180px;
+  background-color: black;
+  position: relative;
 }
 
 #cocktail-grid-container {
-    max-width: 750px;
-    height: fit-content;
-    border: 1px solid black;
-    outline: 1.25px solid rgb(100, 100, 100);
-    box-shadow: 0 0 5px 0 black;
+  max-width: 750px;
+  height: fit-content;
+  border: 1px solid black;
+  outline: 1.25px solid rgb(100, 100, 100);
+  box-shadow: 0 0 5px 0 black;
 }
 
 #med-dialog-container {
-    max-width: 800px;
+  max-width: 800px;
 }
