--- a/src/Styles/Challenges.css
+++ b/src/Styles/Challenges.css
@@ -1,3 +1,21 @@
+@keyframes wobble {
+  0% {
+    transform: rotate3d(-5, 5, 5, 2deg);
+  }
+  25% {
+    transform: rotate3d(5, 5, 5, 2deg);
+  }
+  50% {
+    transform: rotate3d(5, -5, -5, 2deg);
+  }
+  75% {
+    transform: rotate3d(-5, -5, -5, 2deg);
+  }
+  100% {
+    transform: rotate3d(-5, 5, 5, 2deg);
+  }
+}
+
 #challenges-container {
   width: 100vw;
   height: 90lvh;
@@ -26,6 +44,11 @@
   perspective: 1000px;
 }
 
+.card-sleeve {
+  animation: wobble 10s ease-in-out infinite;
+  transform-style: preserve-3d;
+}
+
 .card {
   width: 300px;
   height: 450px;
@@ -45,6 +68,7 @@
   border-radius: 1rem;
   padding: 3rem;
   backface-visibility: hidden;
+  outline: 2px solid rgb(71, 71, 71);
 }
 
 .front {
@@ -58,7 +82,6 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  outline: 1px solid rgb(71, 71, 71);
 }
 
 .back > img {
