--- a/src/Styles/Challenges.css
+++ b/src/Styles/Challenges.css
@@ -44,20 +44,34 @@
   perspective: 1000px;
 }
 
+.card-placeholder {
+  width: 300px;
+  height: 450px;
+  transform-style: preserve-3d;
+  opacity: 1;
+  transition: opacity ease-in 0.5s;
+}
+
+.hide-card {
+  opacity: 0;
+}
+
 .card-sleeve {
   animation: wobble 10s ease-in-out infinite;
   transform-style: preserve-3d;
+  width: 100%;
+  height: 100%;
 }
 
 .card {
-  width: 300px;
-  height: 450px;
+  width: 100%;
+  height: 100%;
   position: relative;
   transition: transform 0.8s;
   transform-style: preserve-3d;
 }
 
-.card:hover {
+.card-placeholder:hover {
   cursor: pointer;
 }
 
@@ -94,7 +108,7 @@
 }
 
 @media screen and (max-width: 500px) {
-  .card {
+  .card-sleeve {
     width: 250px;
     height: 375px;
   }
