--- a/src/Styles/Challenges.css
+++ b/src/Styles/Challenges.css
@@ -49,11 +49,15 @@
   height: 450px;
   transform-style: preserve-3d;
   opacity: 1;
-  transition: opacity ease-in 0.5s;
+  transform: translate(0px, 0px);
+  transition: all ease-in 0.5s;
+  scale: 1;
 }
 
 .hide-card {
+  transform: translate(-50px, 50px);
   opacity: 0;
+  scale: 0.9;
 }
 
 .card-sleeve {
