added overflow scroll to overlay css class

--- a/src/Styles/Maps.css
+++ b/src/Styles/Maps.css
@@ -4,6 +4,7 @@
   background-color: black;
   color: white;
   scrollbar-width: none;
+  overflow: scroll;
   background-image: url("../Assets/backgrounds/inteldesk.png");
   background-size: cover;
   background-position: center;
