--- a/src/Styles/Meds.css
+++ b/src/Styles/Meds.css
@@ -5,6 +5,7 @@
   color: white;
   display: flex;
   scrollbar-width: none;
+  overflow: scroll;
   background-image: url("../Assets/backgrounds/medstation.png");
   background-size: cover;
   background-position: center;
