--- a/src/Styles/Randomizer.css
+++ b/src/Styles/Randomizer.css
@@ -7,6 +7,7 @@
   color: white;
   overflow: scroll;
   scrollbar-width: none;
+  overflow: scroll;
 }
 
 #randomizer-container::-webkit-scrollbar {
