--- a/src/Styles/Challenges.css
+++ b/src/Styles/Challenges.css
@@ -32,6 +32,7 @@
   border: 1px solid black;
   outline: 1.25px solid rgb(100, 100, 100);
   box-shadow: 0 0 5px 0 black;
+  backdrop-filter: blur(5px);
 }
 
 .challenge-card {
