--- a/src/Styles/Home.css
+++ b/src/Styles/Home.css
@@ -81,6 +81,7 @@
   box-shadow: 0 0 5px 0 black;
   position: fixed;
   left: 16px;
+  backdrop-filter: blur(5px);
 }
 
 @media screen and (max-width: 500px) {
