--- a/src/Styles/Maps.css
+++ b/src/Styles/Maps.css
@@ -39,6 +39,7 @@
   outline: 1.25px solid rgb(100, 100, 100);
   box-shadow: 0 0 5px 0 black;
   position: relative;
+  backdrop-filter: blur(5px);
 }
 
 #map-grid-error {
