--- a/src/Styles/Meds.css
+++ b/src/Styles/Meds.css
@@ -1,18 +1,10 @@
 #meds-container {
   width: 100vw;
-
   height: 90lvh;
   background-color: black;
   color: white;
   display: flex;
   scrollbar-width: none;
-
-  height: 90lvh;
-  background-color: black;
-  color: white;
-  display: flex;
-  scrollbar-width: none;
-
   overflow: scroll;
   background-image: url("../Assets/backgrounds/medstation.png");
   background-size: cover;
@@ -42,8 +34,5 @@
   border: 1px solid black;
   outline: 1.25px solid rgb(100, 100, 100);
   box-shadow: 0 0 5px 0 black;
-}
-
-#med-dialog-container {
-  max-width: 800px;
+  backdrop-filter: blur(5px);
 }
