--- a/src/Styles/Randomizer.css
+++ b/src/Styles/Randomizer.css
@@ -16,11 +16,7 @@
 
 .overlay {
   width: inherit;
-
-  height: inherit;
-
-  height: inherit;
-
+  height: auto;
   display: flex;
 }
 
@@ -116,6 +112,7 @@ header > h1 {
   border: 1px solid black;
   outline: 1.25px solid rgb(100, 100, 100);
   box-shadow: 0 0 5px 0 black;
+  backdrop-filter: blur(5px);
 }
 
 #dialog {
