--- a/src/Styles/Challenges.css
+++ b/src/Styles/Challenges.css
@@ -91,17 +91,35 @@
 
 .front {
   padding: 1.5rem;
-  background: whitesmoke;
   color: black;
   display: flex;
   flex-direction: column;
   gap: 0.5rem;
+  /* background-color: #c9c9c9;
+  background-color: #e84258; */
 }
 
-.front > img {
+.challenge-img {
   width: 100%;
-  height: 150px;
-  background-color: grey;
+  height: auto;
+  max-height: 45%;
+  background-color: black;
+  outline: 2px solid rgb(71, 71, 71);
+}
+
+.challenge-rank {
+  background-color: black;
+  margin: auto 0 0 auto;
+  color: white;
+  display: flex;
+  gap: 0.5rem;
+  align-items: center;
+  padding: 0.15rem 0.5rem;
+}
+
+.challenge-rank > img {
+  width: 50px;
+  height: auto;
 }
 
 .back {
@@ -129,5 +147,15 @@
 
   .card-face {
     padding: 1rem;
+  }
+
+  .back > img {
+    width: 100px;
+    height: auto;
+  }
+
+  .challenge-rank > img {
+    width: 40px;
+    height: auto;
   }
 }
