--- a/src/Styles/Challenges.css
+++ b/src/Styles/Challenges.css
@@ -35,24 +35,27 @@
   backdrop-filter: blur(5px);
 }
 
-.challenge-card {
+.challenge-card-subcontainer {
   display: flex;
   flex-wrap: wrap;
   gap: 2rem;
   justify-content: center;
+  align-items: center;
   padding: 3rem;
   background-color: rgba(0, 0, 0, 0.65);
   perspective: 1000px;
 }
 
 .card-placeholder {
-  width: 300px;
-  height: 450px;
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
   transform-style: preserve-3d;
   opacity: 1;
   transform: translate(0px, 0px);
   transition: all ease-in 0.5s;
   scale: 1;
+  align-items: center;
 }
 
 .hide-card {
@@ -64,8 +67,8 @@
 .card-sleeve {
   animation: wobble 10s ease-in-out infinite;
   transform-style: preserve-3d;
-  width: 100%;
-  height: 100%;
+  width: 300px;
+  height: 450px;
 }
 
 .card {
@@ -78,6 +81,12 @@
 
 .card-placeholder:hover {
   cursor: pointer;
+}
+
+.card-placeholder > button {
+  opacity: 0;
+  transition: opacity 1s ease-in-out;
+  width: fit-content;
 }
 
 .card-face {
@@ -139,8 +148,21 @@
   transform: rotateY(180deg);
 }
 
+.challenge-tracker {
+  overflow-y: scroll;
+  scrollbar-width: none;
+  max-height: 100%;
+}
+
+.challenge-tracker-header {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 1rem;
+  align-items: center;
+}
+
 @media screen and (max-width: 500px) {
-  .card-placeholder {
+  .card-sleeve {
     width: 250px;
     height: 375px;
   }
