--- a/src/Styles/Nav.css
+++ b/src/Styles/Nav.css
@@ -19,9 +19,11 @@
   display: flex;
   gap: 1rem;
   align-items: center;
+  text-decoration: none;
+  color: white;
 }
 
-.nav-header > img {
+.nav-logo {
   width: 45px;
   height: auto;
 }
