--- a/src/Styles/Home.css
+++ b/src/Styles/Home.css
@@ -11,7 +11,7 @@
 .hideout-overlay {
   width: max(2000px, 100vw);
   height: 90vh;
-  background-image: url("../Assets/backgrounds/hideout.png");
+  background: black url("../Assets/backgrounds/hideout.png");
   background-size: cover;
   background-position: center;
   position: absolute;
