--- a/src/Styles/Stereo.css
+++ b/src/Styles/Stereo.css
@@ -3,7 +3,7 @@
   z-index: 5;
   background-color: black;
   right: 0;
-  bottom: -100%;
+  bottom: -97px;
   flex-direction: column;
   gap: 1rem;
   padding: 1rem;
